--- a/post.ipynb
+++ b/post.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,242 +35,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DP 5\n",
-      "DP 5\n",
-      "DP 5\n",
-      "DP 5\n",
-      "DP 5\n",
-      "DP 36\n",
-      "DP 36\n",
-      "DP 36\n",
-      "DP 36\n",
-      "DP 36\n",
-      "DP 79\n",
-      "DP 79\n",
-      "DP 79\n",
-      "DP 79\n",
-      "DP 79\n",
-      "DP 86\n",
-      "DP 86\n",
-      "DP 86\n",
-      "DP 86\n",
-      "DP 86\n",
-      "DP 154\n",
-      "ns DP 154\n",
-      "DP 154\n",
-      "ns DP 154\n",
-      "DP 154\n",
-      "ns DP 154\n",
-      "DP 154\n",
-      "ns DP 154\n",
-      "DP 154\n",
-      "ns DP 154\n",
-      "DP 155\n",
-      "ns DP 155\n",
-      "DP 155\n",
-      "ns DP 155\n",
-      "DP 155\n",
-      "ns DP 155\n",
-      "DP 155\n",
-      "ns DP 155\n",
-      "DP 155\n",
-      "ns DP 155\n",
-      "DP 156\n",
-      "ns DP 156\n",
-      "DP 156\n",
-      "ns DP 156\n",
-      "DP 156\n",
-      "ns DP 156\n",
-      "DP 156\n",
-      "ns DP 156\n",
-      "DP 156\n",
-      "ns DP 156\n",
-      "DP 157\n",
-      "ns DP 157\n",
-      "DP 157\n",
-      "ns DP 157\n",
-      "DP 157\n",
-      "ns DP 157\n",
-      "DP 157\n",
-      "ns DP 157\n",
-      "DP 157\n",
-      "ns DP 157\n",
-      "DP 158\n",
-      "ns DP 158\n",
-      "DP 158\n",
-      "ns DP 158\n",
-      "DP 158\n",
-      "ns DP 158\n",
-      "DP 158\n",
-      "ns DP 158\n",
-      "DP 158\n",
-      "ns DP 158\n",
-      "DP 159\n",
-      "ns DP 159\n",
-      "DP 159\n",
-      "ns DP 159\n",
-      "DP 159\n",
-      "ns DP 159\n",
-      "DP 159\n",
-      "ns DP 159\n",
-      "DP 159\n",
-      "ns DP 159\n",
-      "DP 160\n",
-      "ns DP 160\n",
-      "DP 160\n",
-      "ns DP 160\n",
-      "DP 160\n",
-      "ns DP 160\n",
-      "DP 160\n",
-      "ns DP 160\n",
-      "DP 160\n",
-      "ns DP 160\n",
-      "DP 161\n",
-      "ns DP 161\n",
-      "DP 161\n",
-      "ns DP 161\n",
-      "DP 161\n",
-      "ns DP 161\n",
-      "DP 161\n",
-      "ns DP 161\n",
-      "DP 161\n",
-      "ns DP 161\n",
-      "DP 162\n",
-      "ns DP 162\n",
-      "DP 162\n",
-      "ns DP 162\n",
-      "DP 162\n",
-      "ns DP 162\n",
-      "DP 162\n",
-      "ns DP 162\n",
-      "DP 162\n",
-      "ns DP 162\n",
-      "DP 163\n",
-      "ns DP 163\n",
-      "DP 163\n",
-      "ns DP 163\n",
-      "DP 163\n",
-      "ns DP 163\n",
-      "DP 163\n",
-      "ns DP 163\n",
-      "DP 163\n",
-      "ns DP 163\n",
-      "DP 164\n",
-      "ns DP 164\n",
-      "DP 164\n",
-      "ns DP 164\n",
-      "DP 164\n",
-      "ns DP 164\n",
-      "DP 164\n",
-      "ns DP 164\n",
-      "DP 164\n",
-      "ns DP 164\n",
-      "DP 165\n",
-      "ns DP 165\n",
-      "DP 165\n",
-      "ns DP 165\n",
-      "DP 165\n",
-      "ns DP 165\n",
-      "DP 165\n",
-      "ns DP 165\n",
-      "DP 165\n",
-      "ns DP 165\n",
-      "DP 166\n",
-      "ns DP 166\n",
-      "DP 166\n",
-      "ns DP 166\n",
-      "DP 166\n",
-      "ns DP 166\n",
-      "DP 166\n",
-      "ns DP 166\n",
-      "DP 166\n",
-      "ns DP 166\n",
-      "DP 167\n",
-      "ns DP 167\n",
-      "DP 167\n",
-      "ns DP 167\n",
-      "DP 167\n",
-      "ns DP 167\n",
-      "DP 167\n",
-      "ns DP 167\n",
-      "DP 167\n",
-      "ns DP 167\n",
-      "DP 168\n",
-      "ns DP 168\n",
-      "DP 168\n",
-      "ns DP 168\n",
-      "DP 168\n",
-      "ns DP 168\n",
-      "DP 168\n",
-      "ns DP 168\n",
-      "DP 168\n",
-      "ns DP 168\n",
-      "DP 169\n",
-      "ns DP 169\n",
-      "DP 169\n",
-      "ns DP 169\n",
-      "DP 169\n",
-      "ns DP 169\n",
-      "DP 169\n",
-      "ns DP 169\n",
-      "DP 169\n",
-      "ns DP 169\n",
-      "DP 170\n",
-      "ns DP 170\n",
-      "DP 170\n",
-      "ns DP 170\n",
-      "DP 170\n",
-      "ns DP 170\n",
-      "DP 170\n",
-      "ns DP 170\n",
-      "DP 170\n",
-      "ns DP 170\n",
-      "DP 171\n",
-      "ns DP 171\n",
-      "DP 171\n",
-      "ns DP 171\n",
-      "DP 171\n",
-      "ns DP 171\n",
-      "DP 171\n",
-      "ns DP 171\n",
-      "DP 171\n",
-      "ns DP 171\n",
-      "DP 172\n",
-      "ns DP 172\n",
-      "DP 172\n",
-      "ns DP 172\n",
-      "DP 172\n",
-      "ns DP 172\n",
-      "DP 172\n",
-      "ns DP 172\n",
-      "DP 172\n",
-      "ns DP 172\n",
-      "DP 173\n",
-      "ns DP 173\n",
-      "DP 173\n",
-      "ns DP 173\n",
-      "DP 173\n",
-      "ns DP 173\n",
-      "DP 173\n",
-      "ns DP 173\n",
-      "DP 173\n",
-      "ns DP 173\n"
+      ".hydra\n",
+      "skipping  .hydra\n",
+      "data1800PlusPhysicsLambda01@100k\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 48\u001b[0m\n\u001b[1;32m     46\u001b[0m filePattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownstreamPressure_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_*\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     47\u001b[0m monitorFile\u001b[38;5;241m=\u001b[39mglob\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(monitorFilePath, filePattern))\n\u001b[0;32m---> 48\u001b[0m DSP\u001b[38;5;241m=\u001b[39mreadFile(\u001b[43mmonitorFile\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# filePattern=\"downstreamPressureTot_\" + row[0].replace(\" \",\"\") + \"_*\"\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m# monitorFile=glob.glob(os.path.join(monitorFilePath, filePattern))\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# DSPtot=readFile(monitorFile[0])\u001b[39;00m\n\u001b[1;32m     52\u001b[0m filePattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mupstreamPressure_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_*\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
+    "# Read and Compare Delta Cp\n",
+    "\n",
+    "from os import listdir\n",
+    "\n",
     "ansysFilePath=\"./ansysDPsValidation.csv\"\n",
     "resultsFilePath=\"./results.csv\"\n",
     "outputsPath=\"./outputs/fwdFacingStep\"\n",
     "\n",
-    "models = [\"old_dataPlusPhysics3600@300k\", \"data3600PlusPhysicsLambda05@300k\", \"data3600PlusPhysicsLambda1@300k\", \"old_physicsOnly@500k\", \"physicsOnly@500k\"]\n",
+    "# models = [\"old_dataPlusPhysics3600@300k\", \"data3600PlusPhysicsLambda05@300k\", \"data3600PlusPhysicsLambda1@300k\", \"old_physicsOnly@500k\", \"physicsOnly@500k\"]\n",
+    "\n",
+    "dirSkip = [\".hydra\", \"init\"]\n",
+    "\n",
+    "models = listdir(outputsPath)\n",
+    "models.sort()\n",
+    "\n",
     "\n",
     "diffSumSkip = [\"DP 5\",\"DP 36\",\"DP 79\",\"DP 86\"]\n",
     "\n",
@@ -294,6 +98,11 @@
     "                        # row.insert(7, \"-\")\n",
     "                        writer.writerow(row)\n",
     "                        for model in models:\n",
+    "                                print(model)\n",
+    "                                if model in dirSkip:\n",
+    "                                        print(\"skipping \", model)\n",
+    "                                        continue\n",
+    "                                \n",
     "                                monitorFilePath = os.path.join(outputsPath, model, \"monitors\")\n",
     "                                # read pressure monitors\n",
     "                                filePattern=\"downstreamPressure_\" + row[0].replace(\" \",\"\") + \"_*\"\n",
@@ -315,7 +124,6 @@
     "                                diffDeltaCp=100*(deltaCp-float(row[4]))/float(row[4])\n",
     "                                # diffDeltaCptot=100*(deltaCptot-float(row[6]))/float(row[6])\n",
     "                                \n",
-    "                                print(row[0])\n",
     "                                if row[0] not in diffSumSkip:\n",
     "                                        print(\"ns\", row[0])\n",
     "                                        diffDict[model] += abs(diffDeltaCp)\n",
@@ -335,51 +143,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Re 100: Lo = 0.4992036946570908  Ho = 0.24759940927043964\n",
-      "Re 200: Lo = 0.468799680085605  Ho = 0.24206058221868754\n",
-      "Re 300: Lo = 0.2752192130293616  Ho = 0.4505409573457049\n",
-      "Re 400: Lo = 0.46647198199767737  Ho = 0.3259645207367429\n",
-      "Re 500: Lo = 0.4641116490118472  Ho = 0.3665257016338343\n",
-      "Re 600: Lo = 0.46402240598051586  Ho = 0.35676000416032794\n",
-      "Re 700: Lo = 0.46063345712358583  Ho = 0.3618633578374334\n",
-      "Re 800: Lo = 0.9099537192701446  Ho = 0.3033702229836598\n",
-      "Re 900: Lo = 0.9074608811736081  Ho = 0.3055324061737196\n",
-      "Re 1000: Lo = 0.8306751812605733  Ho = 0.3183161637435419\n"
+      "data1800PlusPhysicsLambda01@300k & 100 & 0.5532 & 0.1307 & 19.7359 & -  \\\\\n",
+      "  & 200 & 0.3881 & 0.2536 & 14.3812 & -  \\\\\n",
+      "  & 300 & 1.0000 & 0.3152 & 12.2575 & -  \\\\\n",
+      "  & 400 & 1.0000 & 0.3218 & 11.0983 & -  \\\\\n",
+      "  & 500 & 0.7791 & 0.3192 & 10.4320 & -  \\\\\n",
+      "  & 600 & 0.2143 & 0.4004 & 9.8627 & -  \\\\\n",
+      "  & 700 & 0.6457 & 0.3097 & 9.5566 & -  \\\\\n",
+      "  & 800 & 0.3023 & 0.4010 & 9.1406 & -  \\\\\n",
+      "  & 900 & 0.9096 & 0.3010 & 8.9601 & -  \\\\\n",
+      "  & 1000 & 0.8317 & 0.3241 & 8.8776 & -  \\\\\n",
+      "\\hline\n",
+      "physicsOnly@500k & 100 & 0.2500 & 0.1000 & 20.1949 & -  \\\\\n",
+      "  & 200 & 0.2500 & 0.1000 & 14.7074 & -  \\\\\n",
+      "  & 300 & 0.2500 & 0.1000 & 12.5024 & -  \\\\\n",
+      "  & 400 & 0.2500 & 0.3329 & 11.2825 & -  \\\\\n",
+      "  & 500 & 0.2500 & 0.3344 & 10.4527 & -  \\\\\n",
+      "  & 600 & 0.2500 & 0.3370 & 9.9094 & -  \\\\\n",
+      "  & 700 & 0.3795 & 0.3388 & 9.5035 & -  \\\\\n",
+      "  & 800 & 0.3821 & 0.3410 & 9.1886 & -  \\\\\n",
+      "  & 900 & 0.3834 & 0.3420 & 8.9813 & -  \\\\\n",
+      "  & 1000 & 0.3839 & 0.3417 & 8.9443 & -  \\\\\n",
+      "\\hline\n"
      ]
     }
    ],
    "source": [
+    "# Read Optimization Results\n",
+    "\n",
+    "import csv\n",
+    "from os import listdir\n",
     "import numpy as np\n",
+    "\n",
+    "resultsFilePath=\"./resultsOpt.csv\"\n",
     "\n",
     "dirSkip = [\".hydra\", \"init\"]\n",
     "\n",
     "optResultsPath = \"./optimizationResults/\"\n",
     "\n",
-    "models = [\"physicsOnly@500k\"]\n",
-    "# models = listdir(outputsPath)\n",
-    "models.sort()\n",
+    "models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\"]\n",
+    "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\", \"data1800PlusPhysicsLambda01@500k\"]\n",
+    "# models = listdir(optResultsPath)\n",
+    "# models.sort()\n",
     "\n",
-    "for model in models:\n",
-    "    if model in dirSkip:\n",
-    "        print(\"skipping \", model)\n",
-    "        continue\n",
-    "        \n",
-    "    optPath = optResultsPath + model\n",
-    "    for reNr in range (100, 1100, 100):\n",
+    "with open(resultsFilePath, \"w\") as resultsFile:\n",
+    "    writer = csv.writer(resultsFile, delimiter=\",\")\n",
+    "    \n",
+    "    firstRow = [\"model\", \"Re\", \"Lo\", \"Ho\", \"delta Cp\", \"delta Cp Ref\"]\n",
+    "    writer.writerow(firstRow)\n",
     "\n",
-    "        F = np.load(optPath + \"/optResultsF\" + str(reNr) + \".npy\")\n",
-    "        X = np.load(optPath + \"/optResultsX\" + str(reNr) + \".npy\")\n",
-    "        popF = np.load(optPath + \"/popF\" + str(reNr) + \".npy\")\n",
-    "        popX = np.load(optPath + \"/popX\" + str(reNr) + \".npy\") \n",
-    "        # print(\"Re \" + str(re) + \" F: \", F)\n",
-    "        print(\"Re \" + str(reNr) + \": Lo = \" + str(X[0]), \" Ho = \" + str(X[1]))"
+    "\n",
+    "    for model in models:\n",
+    "        if model in dirSkip:\n",
+    "            print(\"skipping \", model)\n",
+    "            continue\n",
+    "            \n",
+    "        optPath = optResultsPath + model\n",
+    "        for reNr in range (100, 1100, 100):\n",
+    "\n",
+    "            F = np.load(optPath + \"/optResultsF\" + str(reNr) + \".npy\")\n",
+    "            X = np.load(optPath + \"/optResultsX\" + str(reNr) + \".npy\")\n",
+    "            popF = np.load(optPath + \"/popF\" + str(reNr) + \".npy\")\n",
+    "            popX = np.load(optPath + \"/popX\" + str(reNr) + \".npy\") \n",
+    "            # print(\"Re \" + str(re) + \" F: \", F)\n",
+    "            # print(\"Re \" + str(reNr) + \": Lo = \" + str(X[0]), \" Ho = \" + str(X[1]))\n",
+    "            \n",
+    "            row = [model]\n",
+    "            row += [reNr, X[0], X[1], F[0]]\n",
+    "            \n",
+    "            if reNr == 100:\n",
+    "                latexStr = model + \" & \" + str(reNr)\n",
+    "            else:\n",
+    "                latexStr = \" \" + \" & \" + str(reNr)\n",
+    "            \n",
+    "            for value in row[2:]:\n",
+    "                # print(value)\n",
+    "                valueF = round(float(value), 4)\n",
+    "                latexStr += \" & \" + \"%.4f\" % valueF\n",
+    "            latexStr += \" & - \"\n",
+    "            latexStr += \" \\\\\\\\\"\n",
+    "            \n",
+    "\n",
+    "            \n",
+    "            writer.writerow(row)\n",
+    "            print(latexStr)\n",
+    "        print(\"\\\\hline\")\n"
    ]
   },
   {
@@ -395,16 +250,7 @@
      ]
     }
    ],
-   "source": [
-    "from os import walk, listdir\n",
-    "i = 1\n",
-    "dir = \"./outputs/fwdFacingStep\"\n",
-    "print(listdir(dir))\n",
-    "# for root, dirs, files in walk(\"./outputs/fwdFacingStep\"):\n",
-    "#     print(i)\n",
-    "#     print(dirs)\n",
-    "#     i+=i"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -422,9 +268,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "t"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
