--- a/post.ipynb
+++ b/post.ipynb
@@ -143,13 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "physicsOnly@500k & 100 & 0.2500 & 0.1000 & 20.1949 & -  \\\\\n",
+      "  & 200 & 0.2500 & 0.1000 & 14.7074 & -  \\\\\n",
+      "  & 300 & 0.2500 & 0.1000 & 12.5024 & -  \\\\\n",
+      "  & 400 & 0.2500 & 0.3329 & 11.2825 & -  \\\\\n",
+      "  & 500 & 0.2500 & 0.3344 & 10.4527 & -  \\\\\n",
+      "  & 600 & 0.2500 & 0.3370 & 9.9094 & -  \\\\\n",
+      "  & 700 & 0.3795 & 0.3388 & 9.5035 & -  \\\\\n",
+      "  & 800 & 0.3821 & 0.3410 & 9.1886 & -  \\\\\n",
+      "  & 900 & 0.3834 & 0.3420 & 8.9813 & -  \\\\\n",
+      "  & 1000 & 0.3839 & 0.3417 & 8.9443 & -  \\\\\n",
+      "\\hline\n",
       "data1800PlusPhysicsLambda01@300k & 100 & 0.5532 & 0.1307 & 19.7359 & -  \\\\\n",
       "  & 200 & 0.3881 & 0.2536 & 14.3812 & -  \\\\\n",
       "  & 300 & 1.0000 & 0.3152 & 12.2575 & -  \\\\\n",
@@ -161,16 +172,16 @@
       "  & 900 & 0.9096 & 0.3010 & 8.9601 & -  \\\\\n",
       "  & 1000 & 0.8317 & 0.3241 & 8.8776 & -  \\\\\n",
       "\\hline\n",
-      "physicsOnly@500k & 100 & 0.2500 & 0.1000 & 20.1949 & -  \\\\\n",
-      "  & 200 & 0.2500 & 0.1000 & 14.7074 & -  \\\\\n",
-      "  & 300 & 0.2500 & 0.1000 & 12.5024 & -  \\\\\n",
-      "  & 400 & 0.2500 & 0.3329 & 11.2825 & -  \\\\\n",
-      "  & 500 & 0.2500 & 0.3344 & 10.4527 & -  \\\\\n",
-      "  & 600 & 0.2500 & 0.3370 & 9.9094 & -  \\\\\n",
-      "  & 700 & 0.3795 & 0.3388 & 9.5035 & -  \\\\\n",
-      "  & 800 & 0.3821 & 0.3410 & 9.1886 & -  \\\\\n",
-      "  & 900 & 0.3834 & 0.3420 & 8.9813 & -  \\\\\n",
-      "  & 1000 & 0.3839 & 0.3417 & 8.9443 & -  \\\\\n",
+      "data1800PlusPhysicsLambda01@500k & 100 & 0.5535 & 0.1291 & 19.8896 & -  \\\\\n",
+      "  & 200 & 0.3898 & 0.2544 & 14.4714 & -  \\\\\n",
+      "  & 300 & 0.2824 & 0.3925 & 12.3547 & -  \\\\\n",
+      "  & 400 & 0.6426 & 0.3202 & 11.1529 & -  \\\\\n",
+      "  & 500 & 0.7783 & 0.3204 & 10.4429 & -  \\\\\n",
+      "  & 600 & 0.2829 & 0.4001 & 9.9015 & -  \\\\\n",
+      "  & 700 & 0.6454 & 0.3118 & 9.5501 & -  \\\\\n",
+      "  & 800 & 0.3017 & 0.4007 & 9.1438 & -  \\\\\n",
+      "  & 900 & 0.9091 & 0.3023 & 8.9590 & -  \\\\\n",
+      "  & 1000 & 0.8323 & 0.3244 & 8.8755 & -  \\\\\n",
       "\\hline\n"
      ]
     }
@@ -188,8 +199,8 @@
     "\n",
     "optResultsPath = \"./optimizationResults/\"\n",
     "\n",
-    "models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\"]\n",
-    "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\", \"data1800PlusPhysicsLambda01@500k\"]\n",
+    "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\"]\n",
+    "models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@500k\"]\n",
     "# models = listdir(optResultsPath)\n",
     "# models.sort()\n",
     "\n",
