--- a/post.ipynb
+++ b/post.ipynb
@@ -35,27 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".hydra\n",
-      "skipping  .hydra\n",
-      "data1800PlusPhysicsLambda01@100k\n"
+      "physicsOnly@500k\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 48\u001b[0m\n\u001b[1;32m     46\u001b[0m filePattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownstreamPressure_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_*\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     47\u001b[0m monitorFile\u001b[38;5;241m=\u001b[39mglob\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(monitorFilePath, filePattern))\n\u001b[0;32m---> 48\u001b[0m DSP\u001b[38;5;241m=\u001b[39mreadFile(\u001b[43mmonitorFile\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# filePattern=\"downstreamPressureTot_\" + row[0].replace(\" \",\"\") + \"_*\"\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m# monitorFile=glob.glob(os.path.join(monitorFilePath, filePattern))\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# DSPtot=readFile(monitorFile[0])\u001b[39;00m\n\u001b[1;32m     52\u001b[0m filePattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mupstreamPressure_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_*\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 46\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskipping \u001b[39m\u001b[38;5;124m\"\u001b[39m, model)\n\u001b[1;32m     44\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m monitorFilePath \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(outputsPath, model, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonitors\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m \u001b[38;5;66;03m# read pressure monitors\u001b[39;00m\n\u001b[1;32m     48\u001b[0m filePattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownstreamPressure_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_*\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -74,6 +72,8 @@
     "\n",
     "models = listdir(outputsPath)\n",
     "models.sort()\n",
+    "\n",
+    "models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@500k\", \"data1800PlusPhysicsLambda1@500k\"]\n",
     "\n",
     "\n",
     "diffSumSkip = [\"DP 5\",\"DP 36\",\"DP 79\",\"DP 86\"]\n",
@@ -143,46 +143,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "physicsOnly@500k & 100 & 0.2500 & 0.1000 & 20.1949 & -  \\\\\n",
-      "  & 200 & 0.2500 & 0.1000 & 14.7074 & -  \\\\\n",
-      "  & 300 & 0.2500 & 0.1000 & 12.5024 & -  \\\\\n",
-      "  & 400 & 0.2500 & 0.3329 & 11.2825 & -  \\\\\n",
-      "  & 500 & 0.2500 & 0.3344 & 10.4527 & -  \\\\\n",
-      "  & 600 & 0.2500 & 0.3370 & 9.9094 & -  \\\\\n",
-      "  & 700 & 0.3795 & 0.3388 & 9.5035 & -  \\\\\n",
-      "  & 800 & 0.3821 & 0.3410 & 9.1886 & -  \\\\\n",
-      "  & 900 & 0.3834 & 0.3420 & 8.9813 & -  \\\\\n",
-      "  & 1000 & 0.3839 & 0.3417 & 8.9443 & -  \\\\\n",
-      "\\hline\n",
-      "data1800PlusPhysicsLambda01@300k & 100 & 0.5532 & 0.1307 & 19.7359 & -  \\\\\n",
-      "  & 200 & 0.3881 & 0.2536 & 14.3812 & -  \\\\\n",
-      "  & 300 & 1.0000 & 0.3152 & 12.2575 & -  \\\\\n",
-      "  & 400 & 1.0000 & 0.3218 & 11.0983 & -  \\\\\n",
-      "  & 500 & 0.7791 & 0.3192 & 10.4320 & -  \\\\\n",
-      "  & 600 & 0.2143 & 0.4004 & 9.8627 & -  \\\\\n",
-      "  & 700 & 0.6457 & 0.3097 & 9.5566 & -  \\\\\n",
-      "  & 800 & 0.3023 & 0.4010 & 9.1406 & -  \\\\\n",
-      "  & 900 & 0.9096 & 0.3010 & 8.9601 & -  \\\\\n",
-      "  & 1000 & 0.8317 & 0.3241 & 8.8776 & -  \\\\\n",
-      "\\hline\n",
-      "data1800PlusPhysicsLambda01@500k & 100 & 0.5535 & 0.1291 & 19.8896 & -  \\\\\n",
-      "  & 200 & 0.3898 & 0.2544 & 14.4714 & -  \\\\\n",
-      "  & 300 & 0.2824 & 0.3925 & 12.3547 & -  \\\\\n",
-      "  & 400 & 0.6426 & 0.3202 & 11.1529 & -  \\\\\n",
-      "  & 500 & 0.7783 & 0.3204 & 10.4429 & -  \\\\\n",
-      "  & 600 & 0.2829 & 0.4001 & 9.9015 & -  \\\\\n",
-      "  & 700 & 0.6454 & 0.3118 & 9.5501 & -  \\\\\n",
-      "  & 800 & 0.3017 & 0.4007 & 9.1438 & -  \\\\\n",
-      "  & 900 & 0.9091 & 0.3023 & 8.9590 & -  \\\\\n",
-      "  & 1000 & 0.8323 & 0.3244 & 8.8755 & -  \\\\\n",
+      "physicsOnly@500k & 100 & 0.2117 & 0.1000 & 20.1844 & -  \\\\\n",
+      "  & 200 & 0.2000 & 0.1000 & 14.6800 & -  \\\\\n",
+      "  & 300 & 0.2000 & 0.3328 & 12.4632 & -  \\\\\n",
+      "  & 400 & 0.2000 & 0.3361 & 11.2295 & -  \\\\\n",
+      "  & 500 & 0.2000 & 0.3370 & 10.4113 & -  \\\\\n",
+      "  & 600 & 0.2000 & 0.3390 & 9.8743 & -  \\\\\n",
+      "  & 700 & 0.2000 & 0.3407 & 9.4838 & -  \\\\\n",
+      "  & 800 & 0.2000 & 0.3426 & 9.1810 & -  \\\\\n",
+      "  & 900 & 0.2000 & 0.3433 & 8.9780 & -  \\\\\n",
+      "  & 1000 & 0.2000 & 0.3436 & 8.9407 & -  \\\\\n",
       "\\hline\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './optimizationResults/data1800PlusPhysicsLambda01@500k/optResultsF100.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m optPath \u001b[38;5;241m=\u001b[39m optResultsPath \u001b[38;5;241m+\u001b[39m model\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m reNr \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m1100\u001b[39m, \u001b[38;5;241m100\u001b[39m):\n\u001b[0;32m---> 33\u001b[0m     F \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43moptPath\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/optResultsF\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mreNr\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     34\u001b[0m     X \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(optPath \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/optResultsX\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(reNr) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     35\u001b[0m     popF \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(optPath \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/popF\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(reNr) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './optimizationResults/data1800PlusPhysicsLambda01@500k/optResultsF100.npy'"
      ]
     }
    ],
