--- a/post.ipynb
+++ b/post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,25 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "physicsOnly@500k\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 46\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskipping \u001b[39m\u001b[38;5;124m\"\u001b[39m, model)\n\u001b[1;32m     44\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m monitorFilePath \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(outputsPath, model, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonitors\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m \u001b[38;5;66;03m# read pressure monitors\u001b[39;00m\n\u001b[1;32m     48\u001b[0m filePattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownstreamPressure_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_*\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+      "data1800PlusPhysicsLambda01@100k & 3.3575 & 0.0480 & 7.7932 & 2.8056 & 0.2033 & 7.4185 & 4.0000 & 0.0341 & 8.3651 \\\\\n",
+      "data1800PlusPhysicsLambda01@300k & 3.0802 & 0.5726 & 6.3171 & 1.4643 & 0.2184 & 3.6186 & 1.0128 & 0.0636 & 2.2134 \\\\\n",
+      "data1800PlusPhysicsLambda01@500k & 3.1638 & 0.3520 & 6.0956 & 1.3168 & 0.1551 & 3.0894 & 0.8495 & 0.0760 & 2.1968 \\\\\n",
+      "data1800PlusPhysicsLambda1@100k & 3.2938 & 0.1523 & 11.7820 & 2.1482 & 0.0405 & 7.6961 & 1.9453 & 0.0726 & 5.5697 \\\\\n",
+      "data1800PlusPhysicsLambda1@300k & 2.2611 & 0.0627 & 7.9794 & 1.4229 & 0.0504 & 5.3362 & 1.4543 & 0.0748 & 4.8295 \\\\\n",
+      "data1800PlusPhysicsLambda1@500k & 2.1155 & 0.1263 & 7.3544 & 1.3318 & 0.0091 & 4.8957 & 1.3812 & 0.0258 & 4.4956 \\\\\n",
+      "dataOnly1800@100k & 11.4502 & 2.1248 & 29.4528 & 6.3774 & 0.1149 & 18.8695 & 5.7416 & 0.0363 & 18.0339 \\\\\n",
+      "dataOnly1800@300k & 10.8237 & 2.0314 & 28.1015 & 5.8851 & 0.2802 & 17.2980 & 5.3193 & 0.3236 & 17.0566 \\\\\n",
+      "dataOnly1800@500k & 10.7369 & 2.0435 & 27.9233 & 5.8340 & 0.2712 & 16.9747 & 5.2383 & 0.1702 & 16.7334 \\\\\n",
+      "physicsOnly@100k & 42.8845 & 3.5273 & 102.4490 & 11.9144 & 0.9807 & 22.6012 & 4.7848 & 0.2908 & 10.6171 \\\\\n",
+      "physicsOnly@300k & 11.2672 & 1.9076 & 34.9490 & 2.8894 & 0.2201 & 8.2296 & 1.2140 & 0.0126 & 3.4929 \\\\\n",
+      "physicsOnly@500k & 8.9718 & 1.7138 & 28.2377 & 2.3606 & 0.2440 & 6.6630 & 1.2564 & 0.0080 & 3.5628 \\\\\n",
+      "pressureDataPlusPhysicsLambda1@100k & 4.5953 & 0.0649 & 11.1085 & 3.5552 & 0.1663 & 18.0468 & 6.5290 & 1.9968 & 31.3289 \\\\\n",
+      "pressureDataPlusPhysicsLambda1@300k & 3.4140 & 0.0930 & 6.5700 & 2.3795 & 0.0059 & 11.6217 & 3.9763 & 0.1176 & 17.8432 \\\\\n",
+      "pressureDataPlusPhysicsLambda1@500k & 3.3561 & 0.0785 & 6.9907 & 1.9894 & 0.1284 & 9.5654 & 3.3937 & 0.4054 & 14.0303 \\\\\n"
      ]
     }
    ],
@@ -61,6 +64,278 @@
     "# Read and Compare Delta Cp\n",
     "\n",
     "from os import listdir\n",
+    "from modulus.sym.domain.validator import Validator\n",
+    "from statistics import mean \n",
+    "\n",
+    "\n",
+    "ansysFilePath=\"./ansysDPsValidation.csv\"\n",
+    "resultsFilePath=\"./results.csv\"\n",
+    "outputsPath=\"./outputs/fwdFacingStep\"\n",
+    "\n",
+    "dirSkip = [\".hydra\", \"init\"]\n",
+    "\n",
+    "models = listdir(outputsPath)\n",
+    "models.sort()\n",
+    "\n",
+    "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda1@500k\"]\n",
+    "\n",
+    "dirSkip = [\".hydra\", \"init\", \"vtp\", \"data1800PlusPhysicsLambda1@100k2pO@300k\", \"data1800PlusPhysicsLambda1@100k2pO@500k\", \"data1800PlusPhysicsLambda1@300k2pO@500k\"]\n",
+    "\n",
+    "diffSumSkip = [\"DP 5\",\"DP 36\",\"DP 79\",\"DP 86\"]\n",
+    "\n",
+    "\n",
+    "with open(ansysFilePath, \"r\") as ansysFile,  open(resultsFilePath, \"w\") as resultsFile:\n",
+    "        reader = csv.reader(ansysFile, delimiter=\",\")\n",
+    "        writer = csv.writer(resultsFile, delimiter=\",\")\n",
+    "        diffDSP= {}\n",
+    "        diffUSP= {}\n",
+    "        diffDCp= {}\n",
+    "\n",
+    "        for i, row in enumerate(reader):\n",
+    "            if i == 0:\n",
+    "                # add columns for difference modulus vs ansys\n",
+    "                row.insert(5, \"Diff Delta Cp [%]\")\n",
+    "                # row.insert(7, \"Diff Delta Cptot [%]\")\n",
+    "                writer.writerow(row)\n",
+    "            else:\n",
+    "                for model in models:\n",
+    "                        if model in dirSkip:\n",
+    "                                # print(\"skipping \", model)\n",
+    "                                continue\n",
+    "                        \n",
+    "                        monitorFilePath = os.path.join(outputsPath, model, \"monitors\")\n",
+    "                        # read pressure monitors\n",
+    "                        filePattern=\"downstreamPressure_\" + row[0].replace(\" \",\"\") + \"_*\"\n",
+    "                        monitorFile=glob.glob(os.path.join(monitorFilePath, filePattern))\n",
+    "                        DSP=readFile(monitorFile[0])\n",
+    "                        # filePattern=\"downstreamPressureTot_\" + row[0].replace(\" \",\"\") + \"_*\"\n",
+    "                        # monitorFile=glob.glob(os.path.join(monitorFilePath, filePattern))\n",
+    "                        # DSPtot=readFile(monitorFile[0])\n",
+    "                        filePattern=\"upstreamPressure_\" + row[0].replace(\" \",\"\") + \"_*\"\n",
+    "                        monitorFile=glob.glob(os.path.join(monitorFilePath, filePattern))\n",
+    "                        USP=readFile(monitorFile[0])\n",
+    "                        # filePattern=\"upstreamPressureTot_\" + row[0].replace(\" \",\"\") + \"_*\"\n",
+    "                        # monitorFile=glob.glob(os.path.join(monitorFilePath, filePattern))\n",
+    "                        # USPtot=readFile(monitorFile[0])\n",
+    "                        \n",
+    "                        # calculate modulus pressure drop and difference modulus vs ansys\n",
+    "                        deltaCp=2*(USP-DSP)\n",
+    "                        \n",
+    "                        trueDSP = float(row[5])\n",
+    "                        trueUSP = float(row[6])\n",
+    "                        trueDeltaCp = float(row[4])\n",
+    "                        \n",
+    "                        if row[0] not in diffSumSkip:\n",
+    "                            if model not in diffDSP.keys():\n",
+    "                                diffDSP[model] = [abs(100*(DSP - trueDSP)/trueDSP)]\n",
+    "                            else:\n",
+    "                                diffDSP[model].append(abs(100*(DSP - trueDSP)/trueDSP))\n",
+    "                                \n",
+    "                            if model not in diffUSP.keys():\n",
+    "                                diffUSP[model] = [abs(100*(USP - trueUSP)/trueUSP)]\n",
+    "                            else:\n",
+    "                                diffUSP[model].append(abs(100*(USP - trueUSP)/trueUSP))\n",
+    "                                \n",
+    "                            if model not in diffDCp.keys():\n",
+    "                                diffDCp[model] = [abs(100*(deltaCp - trueDeltaCp)/trueDeltaCp)]\n",
+    "                            else:\n",
+    "                                diffDCp[model].append(abs(100*(deltaCp - trueDeltaCp)/trueDeltaCp))\n",
+    "                                \n",
+    "                        \n",
+    "                        \n",
+    "                        # add modulus results to table\n",
+    "                        # modRow=[row[0] + \" \" + model] + row[1:4] + [deltaCp] + [diffDeltaCp] + [deltaCptot] + [diffDeltaCptot] + [DSP] + [DSPtot] + [USP] + [USPtot]\n",
+    "                        # writer.writerow(modRow)\n",
+    "            # Add deviation sum\n",
+    "        firstRow = [\"Model\", \"DSP Mean\", \"DSP Min\", \"DSP Max\", \"USP Mean\", \"USP Min\", \"USP Max\", \"DCp Mean\", \"DCp Min\", \"DCp Max\"]\n",
+    "        \n",
+    "        writer.writerow(firstRow)\n",
+    "        \n",
+    "        # print(diffDSP)\n",
+    "        # print(diffUSP)\n",
+    "        # print(diffDCp)\n",
+    "        \n",
+    "        for model in models:\n",
+    "            if model in dirSkip:\n",
+    "                # print(\"skipping \", model)\n",
+    "                continue\n",
+    "            \n",
+    "            maxDSP = max(diffDSP[model])\n",
+    "            maxUSP = max(diffUSP[model])\n",
+    "            maxDCp = max(diffDCp[model])\n",
+    "\n",
+    "            minDSP = min(diffDSP[model])\n",
+    "            minUSP = min(diffUSP[model])\n",
+    "            minDCp = min(diffDCp[model])\n",
+    "            \n",
+    "            meanDSP = mean(diffDSP[model])\n",
+    "            meanUSP = mean(diffUSP[model])\n",
+    "            meanDCp = mean(diffDCp[model])\n",
+    "                \n",
+    "            row = [model, meanDSP, minDSP, maxDSP, meanUSP, minUSP, maxUSP, meanDCp, minDCp, maxDCp]\n",
+    "            writer.writerow(row)\n",
+    "            \n",
+    "            latexStr = model\n",
+    "                \n",
+    "            for value in row[1:]:\n",
+    "                # print(value)\n",
+    "                valueF = round(float(value), 4)\n",
+    "                latexStr += \" & \" + \"%.4f\" % valueF\n",
+    "            latexStr += \" \\\\\\\\\"\n",
+    "            print(latexStr)                    \n",
+    "                                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "physicsOnly@500k\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "physicsOnly@500k\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "physicsOnly@500k\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "physicsOnly@500k\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "physicsOnly@500k\n",
+      "ns DP 154\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 154\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 154\n",
+      "physicsOnly@500k\n",
+      "ns DP 155\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 155\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 155\n",
+      "physicsOnly@500k\n",
+      "ns DP 156\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 156\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 156\n",
+      "physicsOnly@500k\n",
+      "ns DP 157\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 157\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 157\n",
+      "physicsOnly@500k\n",
+      "ns DP 158\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 158\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 158\n",
+      "physicsOnly@500k\n",
+      "ns DP 159\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 159\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 159\n",
+      "physicsOnly@500k\n",
+      "ns DP 160\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 160\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 160\n",
+      "physicsOnly@500k\n",
+      "ns DP 161\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 161\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 161\n",
+      "physicsOnly@500k\n",
+      "ns DP 162\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 162\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 162\n",
+      "physicsOnly@500k\n",
+      "ns DP 163\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 163\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 163\n",
+      "physicsOnly@500k\n",
+      "ns DP 164\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 164\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 164\n",
+      "physicsOnly@500k\n",
+      "ns DP 165\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 165\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 165\n",
+      "physicsOnly@500k\n",
+      "ns DP 166\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 166\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 166\n",
+      "physicsOnly@500k\n",
+      "ns DP 167\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 167\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 167\n",
+      "physicsOnly@500k\n",
+      "ns DP 168\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 168\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 168\n",
+      "physicsOnly@500k\n",
+      "ns DP 169\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 169\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 169\n",
+      "physicsOnly@500k\n",
+      "ns DP 170\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 170\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 170\n",
+      "physicsOnly@500k\n",
+      "ns DP 171\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 171\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 171\n",
+      "physicsOnly@500k\n",
+      "ns DP 172\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 172\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 172\n",
+      "physicsOnly@500k\n",
+      "ns DP 173\n",
+      "data1800PlusPhysicsLambda01@500k\n",
+      "ns DP 173\n",
+      "data1800PlusPhysicsLambda1@500k\n",
+      "ns DP 173\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read and Compare Delta Cp OLD\n",
+    "\n",
+    "from os import listdir\n",
+    "from modulus.sym.domain.validator import Validator\n",
+    "\n",
     "\n",
     "ansysFilePath=\"./ansysDPsValidation.csv\"\n",
     "resultsFilePath=\"./results.csv\"\n",
@@ -121,11 +396,11 @@
     "                                # calculate modulus pressure drop and difference modulus vs ansys\n",
     "                                deltaCp=2*(USP-DSP)\n",
     "                                # deltaCptot=2*(USPtot-DSPtot)\n",
-    "                                diffDeltaCp=100*(deltaCp-float(row[4]))/float(row[4])\n",
+    "                                deltaCpTrue = float(row[4])\n",
+    "                                diffDeltaCp=100*(deltaCp-deltaCpTrue)/deltaCpTrue\n",
     "                                # diffDeltaCptot=100*(deltaCptot-float(row[6]))/float(row[6])\n",
     "                                \n",
     "                                if row[0] not in diffSumSkip:\n",
-    "                                        print(\"ns\", row[0])\n",
     "                                        diffDict[model] += abs(diffDeltaCp)\n",
     "                                \n",
     "                                # add modulus results to table\n",
