--- a/post.ipynb
+++ b/post.ipynb
@@ -581,62 +581,46 @@
     "models = listdir(resultsPath)\n",
     "models.sort()\n",
     "\n",
-    "with open(resultsFilePath, \"w\") as resultsFile:\n",
-    "    writer = csv.writer(resultsFile, delimiter=\",\")\n",
-    "    \n",
-    "    firstRow = [\"model\", \"Re\", \"Lo\", \"Ho\", \"delta Cp\", \"delta Cp Ref\"]\n",
-    "    writer.writerow(firstRow)\n",
     "\n",
-    "    for reNr in range (500, 600, 100):\n",
-    "        for HoV in [0.35, 0.4, 0.45]:\n",
+    "for reNr in [500, 800]:\n",
+    "    for HoV in [0.35, 0.4, 0.45]:\n",
+    "        \n",
+    "        plt.figure()\n",
+    "        plt.title(\"Re\" + str(reNr) + \"Ho\" + str(HoV))\n",
+    "        \n",
+    "        #plot ansys response for comparison\n",
+    "        ansysFilePath = \"./AnsysResponseRe\" + str(reNr) + \"Ho\" + str(HoV) + \".csv\"\n",
+    "        with open(ansysFilePath, \"r\") as ansysFile:\n",
+    "            x_vals_ans = []\n",
+    "            y_vals_ans = []\n",
+    "            reader = csv.reader(ansysFile, delimiter=\",\")\n",
+    "            for i in range(8):\n",
+    "                    reader.__next__()\n",
+    "            for row in reader:\n",
+    "                x_vals_ans.append(float(row[0]))\n",
+    "                y_vals_ans.append(float(row[1]))\n",
+    "        \n",
+    "        plt.plot(x_vals_ans, y_vals_ans, label=\"ansys\")\n",
+    "\n",
+    "        #plot response for modulus models\n",
+    "        for model in models:\n",
+    "            if model in dirSkip:\n",
+    "                print(\"skipping \", model)\n",
+    "                continue\n",
+    "                    \n",
+    "            path = resultsPath + model\n",
+    "\n",
+    "            designs = np.load(path + \"/designsRe\" + str(reNr) + \"Ho\" + str(HoV) + \".npy\")\n",
+    "            results = np.load(path + \"/resultsRe\" + str(reNr) + \"Ho\" + str(HoV) + \".npy\")\n",
+    "\n",
+    "            x_vals = [val[0] for val in designs]\n",
+    "\n",
+    "            plt.plot(x_vals, results, label=model)\n",
     "            \n",
-    "            # print(\"Re\" + str(reNr) + \"Ho\" + str(HoV))\n",
-    "            plt.figure()\n",
-    "            plt.title(\"Re\" + str(reNr) + \"Ho\" + str(HoV))\n",
-    "            \n",
-    "            ansysFilePath = \"./AnsysResponseRe\" + str(reNr) + \"Ho\" + str(HoV) + \".csv\"\n",
-    "            # print(ansysFilePath)\n",
-    "            \n",
-    "            with open(ansysFilePath, \"r\") as ansysFile,  open(resultsFilePath, \"w\") as resultsFile:\n",
-    "                x_vals_ans = []\n",
-    "                y_vals_ans = []\n",
-    "                reader = csv.reader(ansysFile, delimiter=\",\")\n",
-    "                for i in range(8):\n",
-    "                        reader.__next__()\n",
-    "                for row in reader:\n",
-    "                    x_vals_ans.append(float(row[0]))\n",
-    "                    y_vals_ans.append(float(row[1]))\n",
-    "            \n",
-    "            plt.plot(x_vals_ans, y_vals_ans, label=\"ansys\")\n",
-    "\n",
-    "            for model in models:\n",
-    "                if model in dirSkip:\n",
-    "                    print(\"skipping \", model)\n",
-    "                    continue\n",
-    "                \n",
-    "\n",
-    "                        \n",
-    "                path = resultsPath + model\n",
-    "\n",
-    "                designs = np.load(path + \"/designsRe\" + str(reNr) + \"Ho\" + str(HoV) + \".npy\")\n",
-    "                results = np.load(path + \"/resultsRe\" + str(reNr) + \"Ho\" + str(HoV) + \".npy\")\n",
-    "\n",
-    "\n",
-    "                # print(\"model: \", model)\n",
-    "                # print(\"designs: \", designs)\n",
-    "                # print(\"results: \", results)\n",
-    "                \n",
-    "\n",
-    "                x_vals = [val[0] for val in designs]\n",
-    "                \n",
-    "\n",
-    "                plt.plot(x_vals, results, label=model)\n",
-    "                # plt.plot(x_vals, out_bf_2, label=\"basis_function_2\", color=\"green\")\n",
-    "                # plt.plot(x_vals, out_bf_3, label=\"basis_function_3\", color=\"red\")\n",
-    "            # plt.xticks(x_vals)\n",
-    "            # plt.yticks(results)\n",
-    "            plt.legend()\n",
-    "                # plt.savefig(to_absolute_path(\"./basis_function_viz.png\"))"
+    "        plt.legend()\n",
+    "        plt.xlabel(\"Lo\")\n",
+    "        plt.ylabel(\"delta Cp\")\n",
+    "        plt.savefig(\"./Re\" + str(reNr) + \"Ho\" + str(HoV) + \".png\", dpi = 600)"
    ]
   },
   {
